fix: Refactored evenlistener and aligned banner text

--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ h1 {
 /* make images easier to work with */
 img,
 picutre {
-    max-width: 100%;
-    display: block;
+  max-width: 100%;
+  display: block;
 }
 
 /* make form elements easier to work with */
@@ -185,6 +185,10 @@ main.grid {
   margin-bottom: 2rem;
 }
 
+.text-container > div {
+  justify-items: center;
+}
+
 @media (min-width: 35em) {
   body {
     font-size: 1.125rem;
@@ -218,8 +222,16 @@ main.grid {
   .text-container {
     text-align: start;
     justify-items: start;
-    --gap: clamp(1rem, 3vw, 5rem);
     margin-block-end: 0;
+    height: 100%;
+    grid-template-rows: 1fr min-content;
+    gap: 0;
+    align-items: center;
+  }
+
+  .text-container > div:first-child {
+    --gap: clamp(1rem, 3vw, 5rem);
+    justify-items: start;
   }
 
   .text-container h1 {
@@ -241,11 +253,14 @@ main.grid {
   }
 }
 
-@media (min-width: 55em) {
+@media (min-width: 55.111111em) {
   .text-container h1 {
     font-size: 5rem;
   }
-
+  
+  nav {
+    font-size: 1rem;
+  }
   
 }
 
@@ -434,12 +449,8 @@ nav li {
     position: absolute;
     background-color: white;
     padding: 1.75rem;
-    border-radius: 1rem;
+    border-radius: 0.75rem;
     box-shadow: 0 5px 3rem hsl( var(--clr-almost-black) / 0.25);
-  }
-
-  .collapse-sub-menu:hover {
-    /* color: hsl( var(--clr-medium-gray) ); */
   }
 
   #features-sub-menu {
